Fix scrollbar hiding not working

--- a/styles/utils/hide-scrollbar.css
+++ b/styles/utils/hide-scrollbar.css
@@ -1,5 +1,5 @@
-@layer tailwind {
-    .scrollbar-hide::-webkit-scrollbar {
-        display: none;
-    }
+@layer utilities {
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
